--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
+    "ts-loader": "^9.3.1",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4",
     "webpack": "^5.64.4",
