--- a/package.json
+++ b/package.json
@@ -53,9 +53,11 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-jest": "^0.2.1",
+    "react-redux": "^8.0.4",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "^5.0.1",
+    "redux": "^4.2.0",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.6.0",
