--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
     "sass-loader": "^12.6.0",
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
+    "style-components": "^0.1.0",
     "style-loader": "^3.3.1",
+    "styled-components": "^5.3.6",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "ts-loader": "^9.3.1",
@@ -164,6 +166,7 @@
     "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/react": "^6.5.10",
     "@storybook/testing-library": "^0.0.13",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "eslint": "^8.23.0",
